Fix header pos on small devices

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -47,6 +47,7 @@ body {
 
 .textLogo--frontpage {
   opacity: 0.9;
+  font-size: 3.8rem;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
   @media (max-width: $screen-xs-max) {
     font-size: 44px;
