--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -20,7 +20,7 @@
 
 .section--frontpage,
 .section--frontpage ~ .post-featuredImage {
-  height: 12 * $leading;
+  height: 14em;
 
   @media (max-width: $screen-xs-max) {
     height: 10 * $leading;
@@ -55,6 +55,9 @@
     height: auto;
     position: fixed;
     left: 50%;
+    -web-kit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
     opacity: 0;
     -webkit-transition-property: opacity, left, top, width;
@@ -161,7 +164,7 @@
 .postMeta-wrapper--frontpage {
   position: absolute;
   display: inherit;
-  top: 165px;
+  top: 130px;
   left: 50%;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
